--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -1,6 +1,32 @@
+@use '../variables';
+
+
 .event{
     padding: 80px 0;
-    background-image: linear-gradient(#1b6ca7, #442bdb);
+    
+    &--frontend{
+        background-image: linear-gradient(variables.$blue1, variables.$blue2);
+    }
+
+    &--ui-ux{
+        background-image: linear-gradient(variables.$blue2, variables.$pink);
+    }
+
+    &--data-science{
+        background-image: linear-gradient(variables.$pink, variables.$yellow);
+    }
+
+    &--backend{
+        background-image: linear-gradient(variables.$yellow, variables.$pink);
+    }
+
+    &--image-left{
+        .container{
+            flex-direction: row-reverse;
+            gap: 40px;
+        }
+    }
+
     .container{
         display: flex;
     }
@@ -10,7 +36,7 @@
     }
 
     &__details{
-        margin-right: 40px;
+        
         &__title{
             font-size: 18px;
             font-weight: bold;
